# CPP-Module-06

./: .gitignore  CMakeLists.txt
ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.hpp  converters.cpp  main.cpp  printers.cpp
ex01/: Makefile  Serializer.cpp  Serializer.hpp  main.cpp
ex02/: A.cpp  A.hpp  B.cpp  B.hpp  Base.cpp  Base.hpp  C.cpp  C.hpp  Makefile  main.cpp
